gccida/g2/gen_split_1181
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1181/src/insn-emit.c:15180:30: error: use of undeclared identifier 'machine_mode'
v1 = ix86_force_to_memory( ( machine_mode)*( ( unsigned __int8 *)operands[1] + 2), operands[1]); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1181/src/insn-emit.c:15182:30: error: use of undeclared identifier 'machine_mode'
v2 = gen_rtx_fmt_e( FLOAT, ( machine_mode)*( ( unsigned __int8 *)*operands + 2), v1); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1181/src/insn-emit.c:15185:24: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v4 = gen_rtx_fmt_ee( ( rtx_code)*( _WORD *)operands[3], ( machine_mode)*( ( unsigned __int8 *)operands[3] + 2), v2, v3); 
                       ^~~~~~~~
                       rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1181/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1181/src/insn-emit.c:15185:33: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v4 = gen_rtx_fmt_ee( ( rtx_code)*( _WORD *)operands[3], ( machine_mode)*( ( unsigned __int8 *)operands[3] + 2), v2, v3); 
                     ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1181/src/insn-emit.c:15185:59: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_fmt_ee( ( rtx_code)*( _WORD *)operands[3], ( machine_mode)*( ( unsigned __int8 *)operands[3] + 2), v2, v3); 
                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1181/src/insn-emit.c:15188:26: error: use of undeclared identifier 'machine_mode'
ix86_free_from_memory( ( machine_mode)*( ( unsigned __int8 *)operands[1] + 2)); 
                         ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_split_1181/src/obj/insn-emit.o] Error 1
